ui: paging layout overflow fix for Internet Explorer

--- a/elmyra.ip.access.epo/elmyra/ip/access/epo/static/widget/jqpagination/css/jqpagination.css
+++ b/elmyra.ip.access.epo/elmyra/ip/access/epo/static/widget/jqpagination/css/jqpagination.css
@@ -85,7 +85,7 @@
 }
 
 .medium.jqpagination input {
-    width: 244px;
+    width: 243px;
     height: 30px;
     font-size: 15px;
 }
